src/components/Input.module.css
.wrapper {
  position: relative;
  display: flex;
  align-items: center;
  height: var(--input-height);
  padding: 0 1rem;
  gap: 1.8rem;
  box-shadow: inset 0rem -0.0625rem 0.125rem 0rem var(--color-secondary-75);
}

.btn {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 1rem;
  height: 1rem;
  color: var(--color-text-40);
  cursor: pointer;
  transition: all 0.3s ease-out;

  &:hover {
    color: var(--color-text-50);
  }
}

.dropdownBtn {
  & > div {
    position: absolute;
    top: 70%;
    left: 60%;
    transform: translate(-50%, -50%);
    scale: 1.4;
  }
}

.dropdownBtnExpanded {
  transform: rotate(90deg);

  & > div {
    transform: translate(-50%, -52.5%);
  }
}

.input {
  flex-grow: 1;
  font-size: 1.5rem;
  line-height: 1.5;
  border: none;
  width: 100%;
  color: var(--color-text-60);
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;

  &::placeholder {
    font-family: 'Helvetica Neue UltraLight Italic', system-ui;
    letter-spacing: 0.04rem;
    color: var(--color-text-40);
  }
}

.addBtn {
  padding-left: 1rem;

  &:active {
    scale: 1.5;
    opacity: 0;
  }

  & > span {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-49%, -60%);
    font-size: 2rem;
  }
}

